--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -4,6 +4,7 @@
     --text-color: #757575;
     --btn-color: #212121;
     --main-header-color: #ffffff;
+    --w-e-gap: 30px;
 }
 html {
     box-sizing: border-box;
@@ -35,9 +36,15 @@ ul {
     width: 1200px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: px;
-    padding-right: px;
+    padding-left: 15px;
+    padding-right: 15px;
 
+}
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 .list {
@@ -50,15 +57,24 @@ ul {
 
 /*--HEADER--*/
 
+.header {
+    background-color: var(--main-header-color)
+    
+    
+}
 
 .header .container {
     display: flex;
     width: 1200px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: px;
-    padding-right: px;
-}
+    padding-left: 15px;
+    padding-right: 15px;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: #EEEEEE;
+
+    }
 
 .header-nav {
     display: flex;
@@ -71,8 +87,8 @@ ul {
     font-size: 26px;
     line-height: 1.19;
     letter-spacing: 0.03em;
-    margin-top: 24px;
-    margin-bottom: 24px;
+    padding-top: 24px;
+    padding-bottom: 24px;
 
 }
 
@@ -102,8 +118,8 @@ ul {
     display: flex;
     margin-left: auto;
     align-items: center;
-    margin-top: 32px;
-    margin-bottom: 32px;
+    padding-top: 32px;
+    padding-bottom: 32px;
 }
 
 .header-item:not(:last-child) {
@@ -158,7 +174,7 @@ ul {
     display: flex;
     margin-left: 0 auto;
     text-align: center;
-    margin-bottom: 34px;
+    margin-bottom: 50px;
     column-gap: 8px;
     justify-content:center;
 }
@@ -186,10 +202,23 @@ ul {
 .works-examples-list {
     display: flex;
     flex-wrap: wrap;
-    gap: 30px;
+
     margin-left: 0 auto;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding: 0;
+    margin-left: calc(-1 * var(--w-e-gap));
+    margin-top: calc(-1 * var(--w-e-gap));
+    
+}
+
+.works-examples-list .works-examples-item {
+    flex-basis: calc(100% / 3 - var(--w-e-gap));
+    margin-left: var(--w-e-gap);
+    margin-top: var(--w-e-gap);
+
+}
+
+.card {
+    border: 1px solid #EEEEEE;
 }
 
 .works-title {
@@ -198,23 +227,27 @@ ul {
     line-height: 2;
     letter-spacing: 0.06em;
     color: var(--main-title-color);
-    margin-top: 20px;
-    margin-bottom: 4px;
+    
+}
+
+.description {
+    padding: 20px 24px;
 
 }
 
 .works-text {
     font-weight: 400;
     font-size: 16px;
-    line-height: 30px;
+    line-height: 1.87;
     letter-spacing: 0.03em;
     color: var(--text-color);
-    margin-bottom: 20px;
 }
 /*--Footer--*/
 
 .page-footer {
     background-color: #2F303A;
+    padding-top: 50px;
+    padding-bottom: 60px;
 }
 
 .footer .container {
@@ -227,7 +260,6 @@ ul {
     font-size: 26px;
     line-height: 1.19;
     letter-spacing: 0.03em;
-    padding-top: 50px;
     margin-bottom: 20px;
 }
 
@@ -254,7 +286,7 @@ ul {
 
 .footer-list {
     display: block;
-    padding-bottom: 60px;
+
 }
 
 .footer-link {
@@ -272,6 +304,11 @@ ul {
     color: var(--accent-color);
 }
 
+.email {
+    margin-top: 9px;
+    margin-bottom: 9px;
+}
+
 .footer-contacts {
     font-style: normal;
     font-weight: 400;
@@ -279,7 +316,6 @@ ul {
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
-    column-gap: 9px;
 }
 
 .footer-contacts:hover,
