--- a/css/styles.css
+++ b/css/styles.css
@@ -63,12 +63,11 @@ ul {
 
 .header {
     background-color: var(--main-title-color)
-   
 }
 
 .header .container {
     display: flex;
-    
+
 }
 
 .header-nav {
@@ -83,8 +82,8 @@ font-weight: 700;
 font-size: 26px;
 line-height: 1.19;
 letter-spacing: 0.03em;
-margin-top: 24px;
-margin-bottom: 24px;
+padding-top: 24px;
+padding-bottom: 24px;
 
 
 }
@@ -113,8 +112,8 @@ margin-right: 93px;
     display: flex;
     margin-left: auto;
     align-items: center;
-    margin-top: 32px;
-    margin-bottom: 32px;
+    padding-top: 32px;
+    padding-bottom: 32px;
 }
 
 
@@ -128,6 +127,7 @@ font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.02em;
 color: var(--second-title-color);
+
 }
 
 .header-contact {
@@ -159,14 +159,16 @@ color: var(--accent-color);
 /*--hero--*/
 
 .hero .container{
-    padding-top: 200px;
-    padding-bottom: 200px;
+
     background-color: #757575;
 
 }
 
 .page-hero {
     background-color: #757575;
+    padding-top: 200px;
+    padding-bottom: 200px;
+
 }
 
 .hero-title {
@@ -207,7 +209,8 @@ border-radius: 4px;
 color:#757575
 }
 /*--features--*/
-.features .container {
+
+.features {
     padding-top: 94px;
     padding-bottom: 94px;
 }
@@ -243,6 +246,13 @@ margin-bottom: 10px;
 
 /*--Galerry--*/
 
+.gallery {
+    padding-bottom: 94px;
+}
+.gallery .container {
+    padding-left: 15px;
+    padding-right: 15px;
+}
 .gallery-title {
     margin-left: 0 auto;
     text-align: center;
@@ -258,14 +268,13 @@ margin-bottom: 10px;
     display: flex;
     column-gap: 30px;
     margin-left: 0 auto;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-bottom: 94px;
+
 }
 
 /*--Team--*/
 
 .team-section {
+    padding-top: 94px;
     padding-bottom: 94px;
     background-color: #F5F4FA;
 }
@@ -279,7 +288,7 @@ margin-bottom: 10px;
     color: #212121;
     margin-left: 0 auto;
     margin-bottom: 50px;
-    padding-top: 94px;
+
 }
 
 .team-list {
@@ -291,33 +300,41 @@ margin-bottom: 10px;
  padding-right: 15px;
 }
 
+.team-member {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
 .team-aftertitle {
 font-weight: 500;
 font-size: 16px;
-line-height: 1.18px;
+line-height: 1.18;
 letter-spacing: 0.03em;
 color: var(--second-title-color);
 text-align: center;
-margin-top: 30px;
 margin-bottom: 10px;
 }
+
 
 .team-text {
 font-size: 16px;
 line-height: 1.18;
 letter-spacing: 0.03em;
 color: var(--text-color);
-margin-bottom: 20px;
 }
 
 /*--Footer--*/
 
 .footer .container {
     background-color: #2F303A; 
+
 }
 
 .page-footer{
     background-color: #2F303A;
+    padding-top: 50px;
+    padding-bottom: 60px;
+
 }
 .footer-title {
 display: block;
@@ -327,7 +344,6 @@ font-weight: 700;
 font-size: 26px;
 line-height: 1.19;
 letter-spacing: 0.03em;
-padding-top: 50px;
 margin-bottom: 20px;
 
 }
@@ -354,7 +370,7 @@ color: var(--main-title-color);
 
 .footer-list{
     display: block;
-    padding-bottom: 60px;
+
 }
 
 .footer-link {
@@ -365,11 +381,17 @@ line-height: 1.71;
 letter-spacing: 0.03em;
 color: var(--main-title-color);
 margin-bottom: 9px;
+
 }
 
 .footer-link:hover,
 .footer-link:focus {
     color: var(--accent-color);
+}
+
+.email {
+    margin-top: 9px;
+    margin-bottom: 9px;
 }
 
 .footer-contacts {
@@ -379,7 +401,7 @@ font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
 color: rgba(255, 255, 255, 0.6);
-column-gap: 9px;
+
 }
 
 .footer-contacts:hover,
