--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -186,6 +186,7 @@ img {
     text-align: center;
     letter-spacing: 0.03em;
     cursor: pointer;
+    padding: 6px 22px;
     border-radius: 4px;
     color: var(--btn-color)
 
@@ -244,23 +245,28 @@ img {
 }
 /*--Footer--*/
 
-.page-footer {
-    background-color: #2F303A;
-    padding-top: 50px;
-    padding-bottom: 60px;
-}
-
 .footer .container {
     background-color: #2F303A;
 
 }
+
+.page-footer {
+    background-color: #2F303A;
+    padding-top: 50px;
+    padding-bottom: 60px;
+
+}
+
 .footer-title {
     display: block;
+    font-family: 'Raleway', sans-serif;
+    font-style: normal;
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
     letter-spacing: 0.03em;
     margin-bottom: 20px;
+
 }
 
 .footer-logo-one {
@@ -284,8 +290,14 @@ img {
     color: var(--main-header-color);
 }
 
+
 .footer-list {
     display: block;
+
+}
+
+.footer-address {
+    margin-bottom: 9px;
 
 }
 
@@ -295,8 +307,9 @@ img {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    color: #FFFFFF;
+    color: var(--main-header-color);
     margin-bottom: 9px;
+
 }
 
 .footer-link:hover,
@@ -304,8 +317,7 @@ img {
     color: var(--accent-color);
 }
 
-.email {
-    margin-top: 9px;
+.footer-item {
     margin-bottom: 9px;
 }
 
@@ -316,12 +328,11 @@ img {
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
+    margin-bottom: 9px;
+
 }
 
 .footer-contacts:hover,
 .footer-contacts:focus {
     color: var(--accent-color);
 }
-
-
-
