--- a/css/styles.css
+++ b/css/styles.css
@@ -37,8 +37,8 @@ ul {
     width: 1200px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: px;
-    padding-right: px;
+    padding-left: 15px;
+    padding-right: 15px;
 
 }
 
@@ -63,6 +63,7 @@ ul {
 
 .header {
     background-color: var(--main-title-color)
+
 }
 
 .header .container {
@@ -112,8 +113,7 @@ margin-right: 93px;
     display: flex;
     margin-left: auto;
     align-items: center;
-    padding-top: 32px;
-    padding-bottom: 32px;
+
 }
 
 
@@ -127,6 +127,8 @@ font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.02em;
 color: var(--second-title-color);
+padding-top: 32px;
+padding-bottom: 32px;
 
 }
 
@@ -217,6 +219,12 @@ color:#757575
 
 .features-list {
     display: flex;
+    column-gap: 30px;
+}
+
+.features-item {
+    column-gap: 30px;
+    width: 270px;
 }
 .features-title {
 font-weight: 700;
@@ -225,7 +233,6 @@ line-height: 1.14;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: var(--second-title-color);
-padding-left: 15px;
 margin-bottom: 10px;
 
 }
@@ -237,9 +244,9 @@ margin-bottom: 10px;
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--text-color);
-    column-gap: 30px;
-    min-width: 270px;
-    padding-left: 15px;
+
+
+
 }
 
 
@@ -249,10 +256,7 @@ margin-bottom: 10px;
 .gallery {
     padding-bottom: 94px;
 }
-.gallery .container {
-    padding-left: 15px;
-    padding-right: 15px;
-}
+
 .gallery-title {
     margin-left: 0 auto;
     text-align: center;
@@ -287,7 +291,7 @@ margin-bottom: 10px;
     letter-spacing: 0.03em;
     color: #212121;
     margin-left: 0 auto;
-    margin-bottom: 50px;
+    padding-bottom: 50px;
 
 }
 
@@ -296,8 +300,7 @@ margin-bottom: 10px;
  margin-left: 0 auto;
  text-align: center;
  column-gap: 30px;
- padding-left: 15px;
- padding-right: 15px;
+
 }
 
 .team-member {
@@ -326,7 +329,7 @@ color: var(--text-color);
 /*--Footer--*/
 
 .footer .container {
-    background-color: #2F303A; 
+    background-color: #2F303A;
 
 }
 
@@ -368,9 +371,14 @@ letter-spacing: 0.03em;
 color: var(--main-title-color);
 }
 
+
 .footer-list{
     display: block;
 
+}
+
+.footer-address {
+    margin-bottom: 9px;
 }
 
 .footer-link {
@@ -389,8 +397,7 @@ margin-bottom: 9px;
     color: var(--accent-color);
 }
 
-.email {
-    margin-top: 9px;
+.footer-item {
     margin-bottom: 9px;
 }
 
@@ -401,6 +408,7 @@ font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
 color: rgba(255, 255, 255, 0.6);
+margin-bottom: 9px;
 
 }
 
