--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -58,21 +58,16 @@ img {
 /*--HEADER--*/
 
 .header {
+    border: 1px solid #ECECEC;
     background-color: var(--main-header-color)
+   
     
     
 }
 
 .header .container {
     display: flex;
-    width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 15px;
-    padding-right: 15px;
-    border-bottom-width: 1px;
-    border-bottom-style: solid;
-    border-bottom-color: #EEEEEE;
+
 
     }
 
@@ -100,7 +95,7 @@ img {
     line-height: 1.19;
     letter-spacing: 0.03em;
     color: var(--accent-color);
-    margin-left: 15px;
+    
 }
 
 .header-logo-two {
@@ -118,20 +113,11 @@ img {
     display: flex;
     margin-left: auto;
     align-items: center;
-    padding-top: 32px;
-    padding-bottom: 32px;
+    
 }
 
 .header-item:not(:last-child) {
     margin-right: 50px;
-}
-
-.header-contact {
-    display: flex;
-    align-items: center;
-    margin-left: auto;
-    column-gap: 50px;
-    margin-right: 15px;
 }
 
 .header-item-link {
@@ -140,17 +126,26 @@ img {
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--second-title-color);
+    padding-top: 32px;
+    padding-bottom: 32px;
 }
 
 .header-item-link:hover,
 .header-item-link:focus {
     color: var(--accent-color);
+}   
+.header-contact {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+    column-gap: 50px;
+    margin-right: 15px;
 }
 
 .header-item-contacts {
     font-weight: 500;
     font-size: 14px;
-    line-height: 1, 14;
+    line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--text-color);
 }
@@ -166,9 +161,11 @@ img {
 }
 /*--FILTER--*/
 
-.works .container {
-    display: flex;
+.works {
+padding-top: 94px;
+padding-bottom: 94px;
 }
+
 
 .works-filter-list {
     display: flex;
